--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
